Fix Bug #1127: Production: Margin is broken on normal screens due to carousel

--- a/YoFi.AspNet/wwwroot/css/site.css
+++ b/YoFi.AspNet/wwwroot/css/site.css
@@ -1,7 +1,7 @@
 ﻿/* Wrapping element */
 /* Set some basic padding to keep content from hitting the edges */
 .body-content {
-    padding-top: 50px;
+    padding-top: 15px;
     padding-left: 15px;
     padding-right: 15px;
 }
